--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,14 +1,22 @@
-<p style="color: green"><%= notice %></p>
+<table class="table table-striped table-bordered">
+  <thead class="table-dark">
+    <tr>
+      <th>First name</th>
+      <th>Last name</th>
+      <th>Email</th>
+      <th>Phone</th>
+      <th>Twitter</th>
+      <th colspan="1"></th>
+    </tr>
+  </thead>
 
-<h1>Friends List</h1>
+  <tbody>
+    <% @friends.each do |friend| %>
+      <tr>
+        <%= render friend %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-<div id="friends">
-  <% @friends.each do |friend| %>
-    <%= render friend %>
-    <p>
-      <%= link_to "Show this friend", friend %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New friend", new_friend_path %>
+<%= link_to "New friend", new_friend_path, class:"btn btn-secondary" %>
