--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -11,27 +11,31 @@
     </div>
   <% end %>
 
-  <div class="form-group" style="padding-bottom: 10px" >
+  <div class="field form-group" style="padding-bottom: 10px" >
     <%= form.text_field :first_name, class:"form-control", placeholder:"First Name" %>
   </div>
 
-  <div class="form-group" style="padding-bottom: 10px" >
+  <div class="field form-group" style="padding-bottom: 10px" >
     <%= form.text_field :last_name, class:"form-control", placeholder:"Last Name" %>
   </div>
 
-  <div class="form-group" style="padding-bottom: 10px" >
+  <div class="field form-group" style="padding-bottom: 10px" >
     <%= form.text_field :email, class:"form-control", placeholder:"Email" %>
   </div>
 
-  <div class="form-group" style="padding-bottom: 10px" >
+  <div class="field form-group" style="padding-bottom: 10px" >
     <%= form.text_field :phone, class:"form-control", placeholder:"Phone Number" %>
   </div>
 
-  <div class="form-group" style="padding-bottom: 10px" >
+  <div class="field form-group" style="padding-bottom: 10px" >
     <%= form.text_field :twitter, class:"form-control", placeholder:"Twitter" %>
   </div>
 
-  <div class="form-group">
-    <%= form.submit class:"btn btn-secondary" %>
+  <div class="field form-group" style="padding-bottom: 10px" >
+    <%= form.number_field :user_id, id: :friend_user_id, class:"form-control", value:current_user.id, type: :hidden %>
+  </div>
+
+  <div class="field form-group">
+    <%= form.submit class:"btn btn-primary" %>
   </div>
 <% end %>
