--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -1,9 +1,5 @@
   <td>
-    <%= friend.first_name %>
-  </td>
-
-  <td>
-    <%= friend.last_name %>
+    <%= link_to friend.first_name + ' ' + friend.last_name, friend %>
   </td>
 
   <td>
@@ -16,8 +12,4 @@
 
   <td>
     <%= friend.twitter %>
-  </td>
-
-  <td>
-    <%= link_to "Show this friend", friend %>
   </td>
