--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,22 +1,29 @@
-<table class="table table-striped table-bordered">
-  <thead class="table-dark">
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th>Twitter</th>
-      <th colspan="1"></th>
-    </tr>
-  </thead>
+<% if user_signed_in? %>
 
-  <tbody>
-    <% @friends.each do |friend| %>
+  <table class="table table-striped table-bordered">
+    <thead class="table-dark">
       <tr>
-        <%= render friend %>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Phone</th>
+        <th>Twitter</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<%= link_to "New friend", new_friend_path, class:"btn btn-secondary" %>
+    <tbody>
+      <% @friends.each do |friend| %>
+        <% if friend.user == current_user %>
+          <tr>
+            <%= render friend %>
+          </tr>
+        <% end %>
+      <% end %>
+    </tbody>
+  </table>
+
+  <%= link_to "New friend", new_friend_path, class:"btn btn-secondary" %>
+
+<% else %>
+  <h1>Hello World!</h1>
+  This is my first Rails WebPages...
+<% end %>
