--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -8,9 +8,13 @@
     </p>
     <br/><br/>
     <div>
-      <%= link_to "Edit this friend", edit_friend_path(@friend), class:"btn btn-secondary" %>
+      <% if @friend.user == current_user %>
+        <%= link_to "Edit this friend", edit_friend_path(@friend), class:"btn btn-secondary" %>
+      <% end %>
       <%= link_to "Back to friends", friends_path, class:"btn btn-dark" %>
-      <%= button_to "Destroy this friend", @friend, method: :delete, class:"btn btn-danger" %>
+      <% if @friend.user == current_user %>
+        <%= link_to "Destroy this friend", @friend, data: { "turbo-method": :delete }, class:"btn btn-danger" %>
+      <% end %>
     </div>
   </div>
 </div>
